# cryptogame

./: Makefile  README.md
client/: Dockerfile  Dockerfile.dev  Makefile  docker-bake.hcl  package-lock.json  package.json  vite.config.ts
client/src/lib/: commands.ts
client/src/lib/components/: WebSocket.svelte
client/src/routes/: +page.svelte
server/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  config.json  docker-bake.hcl
server/src/: command.rs  config.rs  game.rs  main.rs  message.rs  player.rs  state.rs
