[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-channel = "0.3.30"
futures-util = "0.3.30"
once_cell = "1.19.0"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1.15"
tokio-tungstenite = "0.21"
uuid = { version = "1.7.0", features = ["v4"] }
