[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.3"
futures-channel = "0.3.30"
futures-util = "0.3.30"
log = "0.4.21"
once_cell = "1.19.0"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1.15"
tokio-tungstenite = "0.21"
uuid = { version = "1.7.0", features = ["v4"] }
